--- a/src/style.css
+++ b/src/style.css
@@ -149,3 +149,11 @@ main {
   flex: 1 1 0;
   text-align: right;
 }
+
+
+.gradient-text {
+  background: linear-gradient(90deg, #3349f6 0%, #21ffd3 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  display: inline-block;
+}
